// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should renders 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c16 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c18:link,
.c18:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c18[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c25:link,
.c25:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c25:not([disabled]):hover,
.c25:not([disabled]):active,
.c25:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c25[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c23 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c26 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c21 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c24 {
  padding: 0 0.4rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 + .c19 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c15 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c18 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c24"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c25"
      >
        <svg
          class="c26"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders a breadcrumbs 1`] = `
.c11 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c20 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c20 > *:first-child {
  margin-top: 0;
}

.c20 > *:last-child {
  margin-bottom: 0;
}

.c13 {
  padding: 2rem 0;
  color: #3e486e;
}

.c12 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c23 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c23 > *:first-child {
  margin-top: 0;
}

.c23 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c24 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c26:link,
.c26:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c26:not([disabled]):hover,
.c26:not([disabled]):active,
.c26:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c26[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c33:link,
.c33:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c33:not([disabled]):hover,
.c33:not([disabled]):active,
.c33:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c33[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
  overflow: hidden;
}

.c1:before,
.c1:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c1:before {
  left: -2rem;
}

.c1:after {
  right: -2rem;
}

.c2 {
  overflow-x: auto;
}

.c30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c31 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c34 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c10 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c14 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c14 > *:first-child {
  margin-top: 0;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  color: #4d73b8;
  font-weight: 600;
}

.c18 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c19 {
  color: #4d73b8;
  font-weight: 600;
}

.c29 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c32 {
  padding: 0 0.4rem;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c28 + .c27 {
  margin-left: 1.6rem;
}

.c0 {
  margin-bottom: 1rem;
  overflow-x: auto;
}

.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem 0 0;
  white-space: nowrap;
}

.c4:first-of-type {
  padding-left: 0;
}

.c7 {
  width: 1.2rem;
  margin-right: 1rem;
  color: #7598d6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  color: #7598d6;
}

.c8 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  width: 80%;
}

.c21 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c21 > *:first-child {
  margin-top: 0;
}

.c21 > *:last-child {
  margin-bottom: 0;
}

.c22 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c20 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c23 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c23 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c14 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c18 {
    margin-left: 0;
  }
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    font-size: 1.2rem;
  }

  .c4:not(:last-of-type) {
    display: none;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

@media print {
  .c8 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c9 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c21 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <li
            class="c4"
          >
             
            <a
              class="c5"
              href="/"
              title="Retour à l'accueil"
            >
              <svg
                class="c6"
                fill="none"
                viewBox="0 0 16 16"
              >
                <path
                  d="M12.216 6.056L8.114 2.197a.166.166 0 00-.228 0L3.784 6.056v7.089c0 .088.07.154.154.154h8.124c.08 0 .154-.069.154-.154V6.056zm.936.88v6.828c0 .253-.21.458-.47.458H3.318a.464.464 0 01-.47-.458V6.937l-1.055.993a.474.474 0 01-.662-.016.455.455 0 01.014-.65l6.519-6.132a.498.498 0 01.674 0l6.519 6.131a.455.455 0 01.014.651.472.472 0 01-.662.016l-1.056-.993z"
                  fill="currentColor"
                />
              </svg>
              Accueil
            </a>
          </li>
          <li
            class="c4"
          >
            <svg
              class="c7"
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                d="M11.37 7.37L5.296.26A.708.708 0 004.76 0a.708.708 0 00-.537.26A.973.973 0 004 .89c0 .236.08.462.223.63L9.759 8l-5.536 6.48a.972.972 0 00-.223.63c0 .236.08.463.223.63.142.166.335.26.537.26a.709.709 0 00.537-.26l6.072-7.11a.91.91 0 00.165-.29 1.021 1.021 0 000-.68.91.91 0 00-.165-.29z"
                fill="currentColor"
              />
            </svg>
             
            <a
              class="c5"
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            class="c4"
          >
            <svg
              class="c7"
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                d="M11.37 7.37L5.296.26A.708.708 0 004.76 0a.708.708 0 00-.537.26A.973.973 0 004 .89c0 .236.08.462.223.63L9.759 8l-5.536 6.48a.972.972 0 00-.223.63c0 .236.08.463.223.63.142.166.335.26.537.26a.709.709 0 00.537-.26l6.072-7.11a.91.91 0 00.165-.29 1.021 1.021 0 000-.68.91.91 0 00-.165-.29z"
                fill="currentColor"
              />
            </svg>
             
            <a
              class="c5"
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
        data-main-content="true"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15"
                >
                  Article du code
                </h1>
                <div
                  class="c16"
                >
                  <span
                    class="c17"
                  >
                    social groove
                  </span>
                  <span
                    class="c18"
                  >
                    Mis à jour le : 
                    <span
                      class="c19"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c22"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div
          class="c11"
        >
          <div
            class="c23"
          >
            <h3
              class="c24"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c25"
            >
              <button
                class="c26 c27 c28"
              >
                Non
              </button>
              <button
                class="c26 c27 c28"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c29"
  >
    <div
      class="c30"
    >
      <div
        class="c31"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c32"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c33"
      >
        <svg
          class="c34"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders back to results link 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c16 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c18:link,
.c18:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c18[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c25:link,
.c25:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c25:not([disabled]):hover,
.c25:not([disabled]):active,
.c25:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c25[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c23 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c26 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c21 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c24 {
  padding: 0 0.4rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 + .c19 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c15 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c18 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c24"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c25"
      >
        <svg
          class="c26"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders related content 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c17 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c23 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c19[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c33:link,
.c33:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c33:not([disabled]):hover,
.c33:not([disabled]):active,
.c33:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c33[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c28:link,
.c28:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c28:not([disabled]):hover,
.c28:not([disabled]):active,
.c28:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c28[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c25 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.6rem 2rem;
  color: #3e486e;
  font-weight: 600;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c25:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c26 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

.c27 {
  margin-top: 1.6rem;
}

.c30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c31 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c34 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c14 {
  border-bottom: 1px dotted #7598d6;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c29 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c32 {
  padding: 0 0.4rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c21 + .c20 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 70%;
}

.c22 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 30%;
  padding: 2rem 1.6rem 2rem 0;
}

.c24 {
  margin: 1.6rem 0;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c16 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:980px) {
  .c22 {
    display: none;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    annualisation du temps de travail. 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        Annualisation
                      </span>
                    </span>
                     de l'
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        annualisation
                      </span>
                    </span>
                    .
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c16"
          >
            <h3
              class="c17"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c18"
            >
              <button
                class="c19 c20 c21"
              >
                Non
              </button>
              <button
                class="c19 c20 c21"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c22"
    >
      <h3
        class="c23"
      >
        Autres contenus pouvant vous intéresser :
      </h3>
      <ul>
        <li
          class="c24"
        >
          <a
            href="/fiche-service-public/LINK_1"
          >
            related sheet sp title 1
          </a>
        </li>
        <li
          class="c24"
        >
          <a
            href="/fiche-ministere-travail/LINK_2"
          >
            related sheet mt title 1
          </a>
        </li>
        <li
          class="c24"
        >
          <a
            href="/external/LINK_3"
          >
            related external title 1
          </a>
        </li>
        <li
          class="c24"
        >
          <a
            class="c25"
            href="/modeles-de-courriers/LETTER_1"
            title="related letter title 1"
          >
            <div
              class="c26"
            >
              related letter title 1
            </div>
            <div
              class="c27"
            >
              <div
                class="c28"
              >
                Consulter
              </div>
            </div>
          </a>
        </li>
        <li
          class="c24"
        >
          <a
            class="c25"
            href="/outils/TOOL_1"
            title="related tool title 1"
          >
            <div
              class="c26"
            >
              related tool title 1
            </div>
            <div
              class="c27"
            >
              <div
                class="c28"
              >
                Démarrer
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c29"
  >
    <div
      class="c30"
    >
      <div
        class="c31"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c32"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c33"
      >
        <svg
          class="c34"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c17 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c19[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c26:link,
.c26:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c26:not([disabled]):hover,
.c26:not([disabled]):active,
.c26:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c26[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c27 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c14 {
  border-bottom: 1px dotted #7598d6;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c25 {
  padding: 0 0.4rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c21 + .c20 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c16 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                     contenant des tooltip sur certains mot comme 
                    <span
                      data-tooltip-ref="__tt__2"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        rescrit
                      </span>
                    </span>
                    . match aussi les abbréviation comme 
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        APE
                      </span>
                    </span>
                     mais pas ape ou ses variantes comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c16"
          >
            <h3
              class="c17"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c18"
            >
              <button
                class="c19 c20 c21"
              >
                Non
              </button>
              <button
                class="c19 c20 c21"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c26"
      >
        <svg
          class="c27"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip for words with diacritics without breaking html 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c17 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c19[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c26:link,
.c26:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c26:not([disabled]):hover,
.c26:not([disabled]):active,
.c26:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c26[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c27 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c14 {
  border-bottom: 1px dotted #7598d6;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c25 {
  padding: 0 0.4rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c21 + .c20 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c16 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      <span
                        data-tooltip-ref="__tt__1"
                      >
                        <span
                          class="c14"
                          data-reach-tooltip-trigger=""
                          tabindex="0"
                        >
                          indemnités
                        </span>
                      </span>
                    </strong>
                    comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c16"
          >
            <h3
              class="c17"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c18"
            >
              <button
                class="c19 c20 c21"
              >
                Non
              </button>
              <button
                class="c19 c20 c21"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c26"
      >
        <svg
          class="c27"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip without breaking previous word 1`] = `
.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 0;
  color: #3e486e;
}

.c4 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c17 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c19[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c26:link,
.c26:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c26:not([disabled]):hover,
.c26:not([disabled]):active,
.c26:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c26[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c27 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c14 {
  border-bottom: 1px dotted #7598d6;
}

.c2 {
  padding: 2rem 0;
  color: #3e486e;
  padding-top: 0;
}

.c6 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  color: #4d73b8;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.4rem;
}

.c11 {
  color: #4d73b8;
  font-weight: 600;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c25 {
  padding: 0 0.4rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c21 + .c20 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c13 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
  margin: 1.6rem auto;
}

.c13 > *:first-child {
  margin-top: 0;
}

.c13 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c16 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c13 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <h1
                  class="c7"
                >
                  Article du code
                </h1>
                <div
                  class="c8"
                >
                  <span
                    class="c9"
                  >
                    social groove
                  </span>
                  <span
                    class="c10"
                  >
                    Mis à jour le : 
                    <span
                      class="c11"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="c12"
              >
                <div
                  class="c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    annualisation du temps de travail. 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        Annualisation
                      </span>
                    </span>
                     de l'
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        annualisation
                      </span>
                    </span>
                    .
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c3"
        >
          <div
            class="c16"
          >
            <h3
              class="c17"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c18"
            >
              <button
                class="c19 c20 c21"
              >
                Non
              </button>
              <button
                class="c19 c20 c21"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <button
        aria-label="Fermer"
        class="c26"
      >
        <svg
          class="c27"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          variant="primary"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
